<resources>
    <string name="app_name">FragmentsLab</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_redbutton">Red Fragment</string>
    <string name="first_greenbutton">Green Fragment</string>
    <string name="first_bluebutton">Blue Fragment</string>
    <string name="uw_purplebutton">UW Purple</string>
    <string name="uw_goldbutton">UW Gold</string>
    <string name="text_color">Color</string>
    <string name="all_color_key">key</string>
</resources>
